# CRISPR-Disease-Map

./: LICENSE  app.db  map_room.py  pyproject.toml
crispr_disease_map/: __init__.py  construct_annotate_dict.py  models.py  routes.py
crispr_disease_map/static/: charts.html  tables.html
crispr_disease_map/templates/: gene_charts.html  genes.html  index.html  screen_charts.html  screens.html
data/dict_annotation/: replicate_to_filename.json  replicate_to_sample.json  sample_to_annotation.json
data/processed_counts_external/: BenslimaneHarrington2020_jurkat.counts.tsv  BowdenJackson2020.counts.tsv  ChenAshworth2022.counts.tsv  ClementsMoldovan2020.counts.tsv  DeWeirdtDoench2020_gattinara.counts.tsv  DeWeirdtDoench2020_secondary.counts.tsv  DhoonmoonMoldovan2020.counts.tsv  FangChien2019.counts.tsv  FengGupta2019DDR.counts.tsv  FengGupta2019Membrane.counts.tsv  FuggerWest2021.counts.tsv  GalloDurocher2022_TKOv3.counts.tsv  HewittBoulton2021.counts.tsv  HustedtDurocher2019TKOv3.counts.tsv  LiuMeng2020.counts.tsv  SchleicherMoldovan2020.counts.tsv  SrinivasJeyasekharan2022.counts.tsv  SrivastavaChen2020.counts.tsv  SuChen2020.counts.tsv  TangChen2021.counts.tsv  VermaGreenberg2021.counts.tsv  XuMajewski2021.counts.tsv
migrations/versions/: 9d9ca8017587_screen_table.py  e9b2d4451e70_samples_table.py
