[tool.poetry]
name = "crispr-disease-map"
version = "0.1.0"
description = ""
authors = ["John McGonigle <john.mcgonigle@insmed.com>"]
readme = "README.md"
packages = [{include = "crispr_disease_map"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
flask = "^2.3.3"
pip = "^23.2.1"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
